--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:+'
     compile 'com.android.support:support-v4:26.1.0'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 
 
 }
