--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.wlassits.budget"
+        applicationId "hu.bme.wlassits.budget"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
@@ -20,15 +20,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:+'
+    compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-
-
+    compile 'com.facebook.android:facebook-android-sdk:4.29.0'
 }
