--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:support-v4:26.1.0'
     compile 'com.facebook.android:facebook-android-sdk:4.29.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
 }
 
 
