--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="hu.bme.wlassits.budget">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 
     <application
@@ -43,6 +44,14 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.statistics.StatisticsActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".presentation.statistics.OutlaysStatisticsActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".presentation.statistics.IncomeStatisticsActivity"
             android:screenOrientation="portrait" />
 
 
