--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:support-v4:26.1.0'
     compile 'com.facebook.android:facebook-android-sdk:4.29.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    compile 'de.greenrobot:eventbus:2.4.0'
 
 }
 
